@startuml

!define ABSTRACT &#123;abstract&#125;

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam classFontSize 12
skinparam classAttributeFontSize 12
hide circle

package data {
    class ModuleList {
        --
        + addModule(m: Module): Module
        + removeModule(moduleCode: String): Module
        + getModule(moduleCode: String): Module
    }

    class Module {
        - moduleCode: String
        - moduleDescription: String
        - isGeneralTask: boolean
        - modularCredit: int
        --
        + addTask(task: Task): void
    }

    class TaskList {
        --
        + addTask(task: Task): Task
        + removeTask(index: int): Task
        + addTag(tagDescription: String, index: int): Task
        + deleteTag(tagDescription: String, index: int): Task
    }

    class Task {
        - taskName: String
        - taskDescription: String
        - isTaskDone: boolean
        - workingTime: String
        - tags: ArrayList<String>
        --
        + getTaskParameterStatus(): TaskParameters
        + toString(): String
    }

    enum "<<enumeration>>\nTaskParameters" as TaskParameters {
        DESCRIPTION_AND_WORKING_TIME
        DESCRIPTION_ONLY
        WORKING_TIME_ONLY
        NO_DESCRIPTION_OR_WORKING_TIME
    }
}

note top of data
Note:
Some methods have been
omitted from this class diagram.
end note

ModuleList --> "1..*" Module

Module -r> "1" TaskList
TaskList -r> "*" Task
Task --u> "1" TaskParameters

class Main
hide Main attributes
hide Main methods

Main --> "1" ModuleList

class Command
hide Command attributes
hide Command methods

Command ..> ModuleList

class Storage
hide Storage attributes
hide Storage methods

Storage ..> ModuleList

hide TaskParameters methods

@enduml